chenged techs and project

--- a/html/index.html
+++ b/html/index.html
@@ -34,15 +34,15 @@
                         <li class="menu-item p-1"><a title="projects" class="link" href="#">Projects</a></li>
                         <li class="menu-item p-1"><a title="Our story" class="link" href="#">Our Story</a></li>
                         <li class="menu-item d-flex align-items-center p-1 mt-2">
-                            <a title="fb" class="social-link d-flex justify-content-center" href="https://www.facebook.com/people/XWEN/61550094961337/" target="_blank"><i class="fa fa-facebook mx-1 p-1"></i></a>
-                            <a title="inst" class="social-link d-flex justify-content-center" href="https://instagram.com/xwen__official?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" target="_blank"><i class="fa fa-instagram mx-1 p-1"></i></a>
+                            <a title="facebook" class="social-link d-flex justify-content-center" href="https://www.facebook.com/people/XWEN/61550094961337/" target="_blank"><i class="fa fa-facebook mx-1 p-1"></i></a>
+                            <a title="instagram" class="social-link d-flex justify-content-center" href="https://instagram.com/xwen__official?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" target="_blank"><i class="fa fa-instagram mx-1 p-1"></i></a>
                         </li>
                     </ul><!-- End Mobile-menu-Items -->
                     <!-- Hamburger Button -->
                     <a title="menu-button" class="menu-btn" href="#" id="ham-btn"><i class="fa fa-bars"></i></a>
                     <div class="social-icons row py-2">
-                        <a title="fb" class="social-link d-flex justify-content-center" href="https://www.facebook.com/people/XWEN/61550094961337/" target="_blank"><i class="fa fa-facebook mx-1 p-1"></i></a>
-                        <a title="inst" class="social-link d-flex justify-content-center" href="https://instagram.com/xwen__official?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" target="_blank"><i class="fa fa-instagram mx-1 p-1"></i></a>
+                        <a title="facebook" class="social-link d-flex justify-content-center" href="https://www.facebook.com/people/XWEN/61550094961337/" target="_blank"><i class="fa fa-facebook mx-1 p-1"></i></a>
+                        <a title="instagram" class="social-link d-flex justify-content-center" href="https://instagram.com/xwen__official?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" target="_blank"><i class="fa fa-instagram mx-1 p-1"></i></a>
                     </div>
                 </div><!-- End Row -->
             </div><!-- End Menu -->
@@ -210,40 +210,52 @@
         <section class="techs">
            <h1 class="py-2 px-lg-5">Technologies We Use</h1>
            <div class="container-flex d-flex justify-content-center py-4 w-100">
-             <div class="slider container-flex py-2">
-                <div class="slider-img col-lg-2">
+             <div class="slider row py-2">
+                <div class="slider-img col-lg-2 mt-3">
                     <img src="../pictures/django.png" alt="django">
                 </div>
-                <div class="slider-img col-lg-2">
+                <div class="slider-img col-lg-2 mt-3">
                     <img src="../pictures/python.png" alt="python">
                 </div>
-                <div class="slider-img col-lg-2">
+                <div class="slider-img col-lg-2 mt-3">
                     <img src="../pictures/node.png" alt="node">
                 </div>
-                <div class="slider-img col-lg-2">
+                <div class="slider-img col-lg-2 mt-3">
                     <img src="../pictures/react.png" alt="react">
                 </div>
-                <div class="slider-img col-lg-2">
+                <div class="slider-img col-lg-2 mt-3">
                     <img src="../pictures/wordpress.png" alt="wordpress">
                 </div>
-                <div class="slider-img col-lg-2">
-                    <img src="../pictures/php.png" alt="css">
+                <div class="slider-img col-lg-2 mt-3">
+                    <img src="../pictures/php.png" alt="php">
+                </div>
+                <div class="slider-img col-lg-2 mt-3">
+                    <img src="../pictures/git.png" alt="git">
+                </div>
+                <div class="slider-img col-lg-2 mt-3">
+                    <img src="../pictures/mongodb.png" alt="mongodb">
+                </div>
+                <div class="slider-img col-lg-2 mt-3">
+                    <img src="../pictures/mysql.png" alt="mysql">
+                </div>
+                <div class="slider-img col-lg-2 mt-3">
+                    <img src="../pictures/flutter.png" alt="flutter">
                 </div>
              </div><!-- End Slider -->
            </div><!-- End Container-FLex -->
         </section><!-- End Techs-->
         <section class="projects" id="projects">
             <h1 class="py-4 px-lg-5">Our Projects</h1>
-            <div class="project row d-flex justify-content-center align-items-center">
+            <div class="project row d-flex justify-content-center align-items-center py-3">
                 <div class="project-techs d-flex justify-content-center align-items-center">
                     <div class="row d-flex justify-content-center">
-                        <img class="mx-2" src="../pictures/html.png">
-                        <img class="mx-2" src="../pictures/css.png">
+                        <img class="mx-2" src="../pictures/html.png" alt="html">
+                        <img class="mx-2" src="../pictures/css.png" alt="css">
                     </div>
                 </div>
                 <div class="project-box container d-flex justify-content-center align-items-center py-4">
                     <div class="project-img col-lg-6">
-                        <img class="project-image" src="../projects/tibco.png">
+                        <img class="project-image" src="../projects/tibco.png" alt="project-1">
                     </div>
                     <div class="project-details col-lg-6">
                         <h3 class="py-2">Jasper Reports Module</h3>
@@ -263,14 +275,14 @@
             <div class="project row d-flex justify-content-center align-items-center py-3">
                 <div class="project-techs d-flex justify-content-center align-items-center">
                     <div class="row d-flex justify-content-center">
-                        <img class="mx-2" src="../pictures/node-fill.png">
-                        <img class="mx-2" src="../pictures/html.png">
-                        <img class="mx-2" src="../pictures/css.png">
+                        <img class="mx-2" src="../pictures/node-fill.png" alt="node">
+                        <img class="mx-2" src="../pictures/html.png" alt="html">
+                        <img class="mx-2" src="../pictures/css.png" alt="css">
                     </div>
                 </div>
                 <div class="project-box container d-flex justify-content-center align-items-center py-4">
                     <div class="project-img col-lg-6">
-                        <img class="project-image" src="../projects/oracle.png">
+                        <img class="project-image" src="../projects/oracle.png" alt="project-2">
                     </div>
                     <div class="project-details col-lg-6">
                         <h3 class="py-2">Oracle-Koha Bridge</h3>
@@ -289,12 +301,12 @@
             <div class="project row d-flex justify-content-center align-items-center py-3">
                 <div class="project-techs d-flex justify-content-center align-items-center">
                     <div class="row d-flex justify-content-center">
-                        <img class="mx-2" src="../pictures/wordpress.png">
+                        <img class="mx-2" src="../pictures/wordpress.png" alt="wordpress">
                     </div>
                 </div>
                 <div class="project-box container d-flex justify-content-center align-items-center py-4">
                     <div class="project-img col-lg-6">
-                        <img class="project-image" src="../projects/zeenia.png">
+                        <img class="project-image" src="../projects/zeenia.png" alt="project-3">
                     </div>
                     <div class="project-details col-lg-6">
                         <h3 class="py-2">Zeenia Travels</h3>
@@ -308,7 +320,7 @@
                             </div>
                             <div class="col-lg-6 p-0">
                                 <h3 class="py-2">Link:</h3>
-                            <a class="py-1" href="https://zeeniatravels.com/" target="_blank"><i class="fa fa-share-square"></i></a>
+                            <a title="zeeniatravels" class="py-1" href="https://zeeniatravels.com/" target="_blank"><i class="fa fa-share-square"></i></a>
                             </div>
                         </div>
                     </div>
@@ -317,13 +329,13 @@
             <div class="project row d-flex justify-content-center align-items-center py-3">
                 <div class="project-techs d-flex justify-content-center align-items-center">
                     <div class="row d-flex justify-content-center">
-                        <img class="mx-2" src="../pictures/html.png">
-                        <img class="mx-2" src="../pictures/css.png">
+                        <img class="mx-2" src="../pictures/html.png" alt="html">
+                        <img class="mx-2" src="../pictures/css.png" alt="css">
                     </div>
                 </div>
                 <div class="project-box container d-flex justify-content-center align-items-center py-4">
                     <div class="project-img col-lg-6">
-                        <img class="project-image" src="../projects/bsk.png">
+                        <img class="project-image" src="../projects/bsk.png" alt="project-4">
                     </div>
                     <div class="project-details col-lg-6">
                         <h3 class="py-2">BSK Portfolio</h3>
@@ -337,7 +349,7 @@
                             </div>
                             <div class="col-lg-6 p-0">
                                 <h3 class="py-2">Link:</h3>
-                                <a class="py-1" href="https://www.brisktechnologies.com.pk/" target="_blank"><i class="fa fa-share-square"></i></a>
+                                <a title="bsk" class="py-1" href="https://www.brisktechnologies.com.pk/" target="_blank"><i class="fa fa-share-square"></i></a>
                             </div>
                         </div>
                     </div>
@@ -346,12 +358,12 @@
             <div class="project row d-flex justify-content-center align-items-center py-3">
                 <div class="project-techs d-flex justify-content-center align-items-center">
                     <div class="row d-flex justify-content-center">
-                        <img class="mx-2" src="../pictures/wordpress.png">
+                        <img class="mx-2" src="../pictures/wordpress.png" alt="wordpress">
                     </div>
                 </div>
                 <div class="project-box container d-flex justify-content-center align-items-center py-4">
                     <div class="project-img col-lg-6">
-                        <img class="project-image" src="../projects/zbe.png">
+                        <img class="project-image" src="../projects/zbe.png" alt="project-5">
                     </div>
                     <div class="project-details col-lg-6">
                         <h3 class="py-2">ZBE</h3>
@@ -366,23 +378,23 @@
                             </div>
                             <div class="col-lg-6 p-0">
                                 <h3 class="py-2">Link:</h3>
-                                <a class="py-1" href="https://zbe.com.pk/" target="_blank"><i class="fa fa-share-square"></i></a>
+                                <a title="zbe" class="py-1" href="https://zbe.com.pk/" target="_blank"><i class="fa fa-share-square"></i></a>
                             </div>
                         </div>
                     </div>
                 </div><!-- End Project-Box -->
             </div><!-- End Row -->
-            <div class="project row d-flex justify-content-center align-items-center py-3">
+            <div class="project row d-flex justify-content-center align-items-center pt-3">
                 <div class="project-techs d-flex justify-content-center align-items-center">
                     <div class="row d-flex justify-content-center">
-                        <img class="mx-2" src="../pictures/php.png">
-                        <img class="mx-2" src="../pictures/html.png">
-                        <img class="mx-2" src="../pictures/css.png">
+                        <img class="mx-2" src="../pictures/php.png" alt="php">
+                        <img class="mx-2" src="../pictures/html.png" alt="html">
+                        <img class="mx-2" src="../pictures/css.png" alt="css">
                     </div>
                 </div>
                 <div class="project-box container d-flex justify-content-center align-items-center py-4">
                     <div class="project-img col-lg-6">
-                        <img class="project-image" src="../projects/koha.png">
+                        <img class="project-image" src="../projects/koha.png" alt="project-6">
                     </div>
                     <div class="project-details col-lg-6">
                         <h3 class="py-2">Koha API Module</h3>
@@ -463,9 +475,9 @@
                   </ul>
                 </div><!-- End Row -->
                 <div class="row d-flex justify-content-center py-2">
-                    <a title="fb" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://www.facebook.com/people/XWEN/61550094961337/" target="_blank"><i class="fa fa-facebook"></i></a>
-                    <a title="inst" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://instagram.com/xwen__official?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" target="_blank"><i class="fa fa-instagram"></i></a>
-                    <a title="lind" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://www.linkedin.com/in/xwen-94b7a128a/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a title="facebook" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://www.facebook.com/people/XWEN/61550094961337/" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a title="instagram" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://instagram.com/xwen__official?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a title="linkedin" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://www.linkedin.com/in/xwen-94b7a128a/" target="_blank"><i class="fa fa-linkedin"></i></a>
                 </div><!-- End Row -->
             </div><!-- End Container-Flex -->
             <div class="closing container-flex w-100">
