made more responsive

--- a/html/index.html
+++ b/html/index.html
@@ -83,13 +83,14 @@
                         <div class="bot-text container-flex">
                             <p class="text-light py-2 px-2">
                                 Lets talk business, what kind of service you are looking for?
+                                A website, mobile app or an ecommerce platform.
                             </p>
                         </div><!-- End Bot-Text -->
                     </div><!-- End Col -->
                     <form class="chat-form py-2 px-2" action="#">
                         <input class="py-2" type="text" id="msg" placeholder="type your message">
                     </form><!-- End Chat-Form -->
-                    <button class="chat-submit mx-2" title="submit" id="msg-submit" onclick="read_input()"><i class="fa fa-paper-plane py-1"></i></button>
+                    <button class="chat-submit mx-2" type="button" title="submit" id="msg-submit" onclick="read_input()"><i class="fa fa-paper-plane py-1"></i></button>
                 </div><!-- End Chat-Box -->
                 <button class="chat-btn py-4" title="chatbot" id="bot-btn"></button>
             </div><!-- End Container -->
@@ -126,7 +127,7 @@
                 </div><!-- End Col-->
             </div><!-- End Row -->
             <div class="about-content row mt-4 py-2">
-                <div class="services content row d-flex justify-content-center py-2">
+                <div class="services content row d-flex justify-content-center pt-2">
                     <div class="service row d-flex justify-content-center align-items-center mx-3">
                         <img class="service-image" src="../pictures/web.png" alt="web">
                         <h2 class="text-center py-2">Website Development</h2>
