--- a/html/index.html
+++ b/html/index.html
@@ -34,15 +34,15 @@
                         <li class="menu-item p-1"><a title="projects" class="link" href="#">Projects</a></li>
                         <li class="menu-item p-1"><a title="Our story" class="link" href="#">Our Story</a></li>
                         <li class="menu-item d-flex align-items-center p-1 mt-2">
-                            <a title="facebook" class="social-link d-flex justify-content-center" href="https://www.facebook.com/people/XWEN/61550094961337/" target="_blank"><i class="fa fa-facebook mx-1 p-1"></i></a>
-                            <a title="instagram" class="social-link d-flex justify-content-center" href="https://instagram.com/xwen__official?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" target="_blank"><i class="fa fa-instagram mx-1 p-1"></i></a>
+                            <a title="facebook" class="social-link d-flex justify-content-center" href="https://www.facebook.com/profile.php?id=61550764452547&mibextid=ZbWKwL" target="_blank"><i class="fa fa-facebook mx-1 p-1"></i></a>
+                            <a title="linkedin" class="social-link d-flex justify-content-center" href="https://www.linkedin.com/in/xwen-co-7b873928b/" target="_blank"><i class="fa fa-linkedin mx-1 p-1"></i></a>
                         </li>
                     </ul><!-- End Mobile-menu-Items -->
                     <!-- Hamburger Button -->
                     <a title="menu-button" class="menu-btn" href="#" id="ham-btn"><i class="fa fa-bars"></i></a>
                     <div class="social-icons row py-2">
-                        <a title="facebook" class="social-link d-flex justify-content-center" href="https://www.facebook.com/people/XWEN/61550094961337/" target="_blank"><i class="fa fa-facebook mx-1 p-1"></i></a>
-                        <a title="instagram" class="social-link d-flex justify-content-center" href="https://instagram.com/xwen__official?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" target="_blank"><i class="fa fa-instagram mx-1 p-1"></i></a>
+                        <a title="facebook" class="social-link d-flex justify-content-center" href="https://www.facebook.com/profile.php?id=61550764452547&mibextid=ZbWKwL" target="_blank"><i class="fa fa-facebook mx-1 p-1"></i></a>
+                        <a title="linkedin" class="social-link d-flex justify-content-center" href="https://www.linkedin.com/in/xwen-co-7b873928b/" target="_blank"><i class="fa fa-linkedin mx-1 p-1"></i></a>
                     </div>
                 </div><!-- End Row -->
             </div><!-- End Menu -->
@@ -246,7 +246,7 @@
            </div><!-- End Container-FLex -->
         </section><!-- End Techs-->
         <section class="projects" id="projects">
-            <h1 class="py-4 px-lg-5">Our Projects</h1>
+            <h1 class="py-4 px-lg-5">Recent Projects</h1>
             <div class="project row d-flex justify-content-center align-items-center py-3">
                 <div class="project-techs d-flex justify-content-center align-items-center">
                     <div class="row d-flex justify-content-center">
@@ -476,8 +476,8 @@
                   </ul>
                 </div><!-- End Row -->
                 <div class="row d-flex justify-content-center py-2">
-                    <a title="facebook" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://www.facebook.com/people/XWEN/61550094961337/" target="_blank"><i class="fa fa-facebook"></i></a>
-                    <a title="instagram" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://instagram.com/xwen__official?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a title="facebook" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://www.facebook.com/profile.php?id=61550764452547&mibextid=ZbWKwL" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <!-- <a title="instagram" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://instagram.com/xwen__official?utm_source=qr&igshid=NGExMmI2YTkyZg%3D%3D" target="_blank"><i class="fa fa-instagram"></i></a> -->
                     <a title="linkedin" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://www.linkedin.com/in/xwen-co-7b873928b/" target="_blank"><i class="fa fa-linkedin"></i></a>
                 </div><!-- End Row -->
             </div><!-- End Container-Flex -->
