--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,14 @@
     <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Step into our world, where we masterfully piece together digital solutions like a perfectly crafted puzzle. Our passion lies in assembling technology's puzzle pieces to empower businesses and individuals for a brighter future.">
+	<link rel="canonical" href="https://xwen151214.github.io/XWEN-Portfolio/html/index.html">
+	<meta property="og:locale" content="en_US">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="XWEN CO.">
+	<meta property="og:description" content="Step into our world, where we masterfully piece together digital solutions like a perfectly crafted puzzle. Our passion lies in assembling technology's puzzle pieces to empower businesses and individuals for a brighter future.">
+	<meta property="og:url" content="https://xwen151214.github.io/XWEN-Portfolio/html/index.html">
+	<meta property="og:site_name" content="XWEN">
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
