--- a/html/index.html
+++ b/html/index.html
@@ -93,20 +93,20 @@
             </div><!-- End Tabs -->
             <div class="about-content row">
                 <div class="content col-lg-6" id="profile-image">
-                    <img class="image" src="../gifs/puzzle-color-bg.gif" alt="puzzle">
+                    <img class="image" src="../pictures/problem.png" alt="puzzle">
                 </div><!-- End Col-->
                 <div class="content col-lg-6" id="profile-text">
-                    <p class="py-2">
+                    <p class="py-2 mt-5">
                         Step into our world, where we masterfully piece together digital solutions like a perfectly crafted puzzle.<br>Our passion lies in assembling technology's puzzle pieces to empower businesses and individuals for a brighter future.<br>Embracing the challenge of solving intricate digital riddles, we are dedicated to delivering exceptional services that lead to triumphant success and growth.
                     </p>
                 </div><!-- End Col-->
             </div><!-- End Row -->
             <div class="about-content row mt-4">
                 <div class="content col-lg-6">
-                    <img class="journey-image" src="../pictures/journey.png" alt="journey">
+                    <img class="image" src="../pictures/journey1.png" alt="journey">
                 </div><!-- End Col-->
                 <div class="content col-lg-6">
-                    <p class="py-2 d-flex align-items-center">
+                    <p class="py-2 d-flex align-items-center mt-5">
                         Just like solving a captivating puzzle, our journey has been a thrilling adventure.<br>With each project, we navigate the complexities and intricacies, ensuring that every digital piece fits flawlessly.<br>From the first edge piece to the final touch, we collaborate with clients across diverse industries,<br>understanding their unique perspectives and crafting bespoke solutions.
                     </p>
                 </div><!-- End Col-->
@@ -235,7 +235,7 @@
                                     <i class="fa fa-share-square"></i>
                                 </div>
                                 <div class="col-lg-1 px-0">
-                                   view
+                                   Preview
                                 </div>
                             </a>
                         </button>
@@ -256,7 +256,7 @@
                                     <i class="fa fa-share-square"></i>
                                 </div>
                                 <div class="col-lg-1 px-0">
-                                    view
+                                    Preview
                                 </div>
                             </a>
                         </button>
@@ -277,7 +277,7 @@
                                     <i class="fa fa-share-square"></i>
                                 </div>
                                 <div class="col-lg-1 px-0">
-                                    view
+                                    Preview
                                 </div>
                             </a>
                         </button>
@@ -300,7 +300,7 @@
                                     <i class="fa fa-share-square"></i>
                                 </div>
                                 <div class="col-lg-1 px-0">
-                                    view
+                                    Preview
                                 </div>
                             </a>
                         </button>
@@ -321,7 +321,7 @@
                                     <i class="fa fa-share-square"></i>
                                 </div>
                                 <div class="col-lg-1 px-0">
-                                    view
+                                    Preview
                                 </div>
                             </a>
                         </button>
@@ -342,7 +342,7 @@
                                     <i class="fa fa-share-square"></i>
                                 </div>
                                 <div class="col-lg-1 px-0">
-                                    view
+                                    Preview
                                 </div>
                             </a>
                         </button>
