added page links

--- a/html/index.html
+++ b/html/index.html
@@ -41,18 +41,18 @@
                     <ul class="mobile-menu-items py-2" id="mobile-menu">
                         <li class="menu-item p-1"><a title="home" class="link" href=#>Home</a></li>
                         <li class="menu-item p-1"><a title="about" class="link" href="#about">About Us</a></li>
-                        <li class="menu-item p-1"><a title="projects" class="link" href="#">Projects</a></li>
+                        <li class="menu-item p-1"><a title="projects" class="link" href="#projects">Projects</a></li>
                         <li class="menu-item p-1"><a title="contact-us" class="link" href="#contact">Contact Us</a></li>
                         <li class="menu-item d-flex align-items-center p-1 mt-2">
                             <a title="facebook" class="social-link d-flex justify-content-center" href="https://www.facebook.com/profile.php?id=61550764452547&mibextid=ZbWKwL" target="_blank"><i class="fa fa-facebook mx-1 p-1"></i></a>
-                            <a title="linkedin" class="social-link d-flex justify-content-center" href="https://www.linkedin.com/in/xwen-co-7b873928b/" target="_blank"><i class="fa fa-linkedin mx-1 p-1"></i></a>
+                            <a title="linkedin" class="social-link d-flex justify-content-center" href="https://www.linkedin.com/company/xwen-co/" target="_blank"><i class="fa fa-linkedin mx-1 p-1"></i></a>
                         </li>
                     </ul><!-- End Mobile-menu-Items -->
                     <!-- Hamburger Button -->
                     <a title="menu-button" class="menu-btn" href="#" id="ham-btn"><i class="fa fa-bars"></i></a>
                     <div class="social-icons row py-2">
                         <a title="facebook" class="social-link d-flex justify-content-center" href="https://www.facebook.com/profile.php?id=61550764452547&mibextid=ZbWKwL" target="_blank"><i class="fa fa-facebook mx-1 p-1"></i></a>
-                        <a title="linkedin" class="social-link d-flex justify-content-center" href="https://www.linkedin.com/in/xwen-co-7b873928b/" target="_blank"><i class="fa fa-linkedin mx-1 p-1"></i></a>
+                        <a title="linkedin" class="social-link d-flex justify-content-center" href="https://www.linkedin.com/company/xwen-co/" target="_blank"><i class="fa fa-linkedin mx-1 p-1"></i></a>
                     </div>
                 </div><!-- End Row -->
             </div><!-- End Menu -->
@@ -416,7 +416,7 @@
                 <div class="row d-flex justify-content-center py-2">
                     <a title="facebook" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://www.facebook.com/profile.php?id=61550764452547&mibextid=ZbWKwL" target="_blank"><i class="fa fa-facebook"></i></a>
                     <a title="whatsapp" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://wa.me/+923091225118" target="_blank"><i class="fa fa-whatsapp"></i></a>
-                    <a title="linkedin" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://www.linkedin.com/in/xwen-co-7b873928b/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a title="linkedin" class="social-link link d-flex justify-content-center py-2 mx-3" href="https://www.linkedin.com/company/xwen-co/" target="_blank"><i class="fa fa-linkedin"></i></a>
                 </div><!-- End Row -->
             </div><!-- End Container-Flex -->
             <div class="closing container-flex w-100">
