--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,7 @@
 	<meta property="og:description" content="Step into our world, where we masterfully piece together digital solutions like a perfectly crafted puzzle. Our passion lies in assembling technology's puzzle pieces to empower businesses and individuals for a brighter future.">
 	<meta property="og:url" content="https://xwen151214.github.io/XWEN-Portfolio/html/index.html">
 	<meta property="og:site_name" content="XWEN">
+    <meta name="google-site-verification" content="uqJnESkiB_n6cZoDj3vazSfcvdJSqPpyHyFLeXuAGUI" />
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
