--- a/html/index.html
+++ b/html/index.html
@@ -236,7 +236,7 @@
                                     <i class="fa fa-share-square"></i>
                                 </div>
                                 <div class="col-lg-1 px-0">
-                                   Report
+                                    Details
                                 </div>
                             </a>
                         </button>
@@ -257,7 +257,7 @@
                                     <i class="fa fa-share-square"></i>
                                 </div>
                                 <div class="col-lg-1 px-0">
-                                    Report
+                                    Details
                                 </div>
                             </a>
                         </button>
