--- a/html/index.html
+++ b/html/index.html
@@ -231,7 +231,7 @@
                             </p>
                         </div>
                         <button class="btn d-flex">
-                            <a class="project-link d-flex w-100" href="#">
+                            <a class="project-link d-flex w-100" href="https://drive.google.com/file/d/1i3KfmCpOL7cJqWgk6reNCska1dwR0me-/view?usp=sharing" target="_blank">
                                 <div class="col-lg-1 mr-4 px-0">
                                     <i class="fa fa-share-square"></i>
                                 </div>
@@ -252,7 +252,7 @@
                             </p>
                         </div>
                         <button class="btn d-flex">
-                            <a class="project-link d-flex w-100" href="#">
+                            <a class="project-link d-flex w-100" href="https://drive.google.com/file/d/1jYZJzzv-NuAPD7T9bklQMjT3-xbqlirG/view?usp=sharing" target="_blank">
                                 <div class="col-lg-1 mr-4 px-0">
                                     <i class="fa fa-share-square"></i>
                                 </div>
@@ -317,7 +317,7 @@
                             </p>
                         </div>
                         <button class="btn d-flex">
-                            <a class="project-link d-flex w-100" href="#">
+                            <a class="project-link d-flex w-100" href="https://drive.google.com/file/d/1Ac81zT3rr5KvXiG1EjqdJ4wt6Nj3N2oQ/view?usp=sharing" target="_blank">
                                 <div class="col-lg-1 mr-4 px-0">
                                     <i class="fa fa-share-square"></i>
                                 </div>
